@@ -3,6 +3,10 @@ update-manager (1:0.98.2) jaunty; urgency=low
   [ Michael Vogt ]
   * DistUpgrade/DistUpgradeController.py:
     - enable apport crash capturing during upgrades
+  * DistUpgrade/DistUpgradeView.py:
+    - create /var/lib/pycentral/pkgremove before the upgrade to
+      help pycentral transition to the new python policy (thanks
+      to doko)
 
   [ Brian Murray ]
   * DistUpgrade/multiple files:
